--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="https://images.pexels.com/photos/26726289/pexels-photo-26726289/free-photo-of-horses-walking-on-river-banks-in-a-traffic-jam.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Najeeb profile picture" />
+        <img src="https://images.pexels.com/photos/13383188/pexels-photo-13383188.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="Najeeb profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
